--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>My first landing page!</title>
 </head>
 <body>
-    
+    <div class="header"></div>
+    <div class="intro-container"></div>
+    <div class="info-container"></div>
+    <div class="quote-container"></div>
+    <div class="sign-container"></div>
+    <div class="footer"></div>
 </body>
 </html>
