--- a/index.html
+++ b/index.html
@@ -8,8 +8,26 @@
     <title>My first landing page!</title>
 </head>
 <body>
-    <div class="header"></div>
-    <div class="intro-container"></div>
+    <div class="header">
+        <div class="top-header">
+            <div>Header Logo</div>
+        <div>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+        </div>
+        
+        <div class="bottom-header">
+            <div>
+                <h3>This website is awesome</h3>
+            </div>
+            <div class="place-holder">this is a place holder for an image</div>
+        </div>
+        
+    </div>
     <div class="info-container"></div>
     <div class="quote-container"></div>
     <div class="sign-container"></div>
