add font and text color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <div class="top-header">
-            <div>Header Logo</div>
+            <div class="logo">Header Logo</div>
         <div>
             <ul>
                 <li><a href="#">header link one</a></li>
@@ -21,8 +21,8 @@
         </div>
         
         <div class="bottom-header">
-            <div>
-                <h3>This website is awesome</h3>
+            <div class="main-text">
+                This website is awesome!
             </div>
             <div class="place-holder">this is a place holder for an image</div>
         </div>
