--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         </div>
         
         <div class="bottom-header">
-            <div class="main-text">
-                This website is awesome!
+            <div>
+                <div class="main-text">This website is awesome!</div>
+                <div class="secondary-text">This website has some subtext that goes here under the main title.
+                    It's a smaller font and the color is lower contrast.
+                </div>
             </div>
             <div class="place-holder">this is a place holder for an image</div>
         </div>
