--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="header">
         <div class="top-header">
-            <div class="logo">Header Logo</div>
+        <div class="logo">Header Logo</div>
         <div>
-            <ul>
+            <ul class="header-links">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
@@ -21,11 +21,12 @@
         </div>
         
         <div class="bottom-header">
-            <div>
-                <div class="main-text">This website is awesome!</div>
+            <div class="description-text">
+                <div class="main-text">This website is awesome</div>
                 <div class="secondary-text">This website has some subtext that goes here under the main title.
                     It's a smaller font and the color is lower contrast.
                 </div>
+                <button>Sign Up</button>
             </div>
             <div class="place-holder">this is a place holder for an image</div>
         </div>
