add styles to the button and align main text

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                 <div class="secondary-text">This website has some subtext that goes here under the main title.
                     It's a smaller font and the color is lower contrast.
                 </div>
-                <button>Sign Up</button>
+                <div><button class="sign-btn">Sign Up</button>  </div>  
             </div>
+            
             <div class="place-holder">this is a place holder for an image</div>
         </div>
         
