--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
         </div>
         
     </div>
-    <div class="info-container"></div>
+    <div class="info-container">
+        <div class="info-text">Some random information.</div>
+        <div class="box-container">
+            <div class="info-box"></div>
+            <div class="info-box"></div>
+            <div class="info-box"></div>
+            <div class="info-box"></div>
+        </div>
+    </div>
     <div class="quote-container"></div>
     <div class="sign-container"></div>
     <div class="footer"></div>
