--- a/index.html
+++ b/index.html
@@ -56,15 +56,19 @@
         </div>
     </div>
     <div class="quote-container">
-        <div class="quote">
-            <div class="quote-text">
-                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
-                people will actually read it. Who knows? All I know is that it looks nice.
-            </div>           
-            <div class="quote-reference">-Thor, God of Thunder</div>
+        <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows?
+            All I know is that it looks nice.</div>
+        <div class="quote-reference">-Thor, God of Thunder</div>
+    </div>
+    <div class="sign-container">
+        <div class="card">
+            <div class="left-side">
+                <div class="card-text">Call to action! It's time!</div>
+                <div class="card-subtext">Sign up four our product by clicking that button right over there</div>
+            </div>
+            <div class="right-side"><button class="signup-btn">Sign up</button></div>
         </div>
     </div>
-    <div class="sign-container"></div>
     <div class="footer"></div>
 </body>
 </html>
