--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
             <div class="right-side"><button class="signup-btn">Sign up</button></div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="footer-text">Copyright © The Odin Project 2022</div>
+    </div>
 </body>
 </html>
